<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">demointership</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_tv_label">Sign in with:</string>
    <string name="login_tv_username">Username:</string>
    <string name="login_tv_password">Password:</string>
    <string name="login_bt_submit">Submit</string>
    <string name="login_bt_forgotPassword">Forgot Password</string>
    <string name="login_bt_CreateNewAccount">Create A New Account</string>
    <string name="forgot_tv_title">Forgot MyMenu Password</string>
    <string name="forgot_et_email_hint">Enter Email</string>
    <string name="forgot_bt_submit">Submit</string>
    <string name="forgot_bt_cancel">Cancel</string>
    <string name="register_bt_submit">Submit</string>
    <string name="register_et_firstname_hint">First Name*</string>
    <string name="register_et_lastname_hint">Last Name*</string>
    <string name="register_et_zipcpde_hint">Zipcode</string>
    <string name="register_et_email_hint">Email Addreess*</string>
    <string name="register_et_username_hint">Username*</string>
    <string name="register_et_password_hint">Password*</string>
    <string name="register_et_confirmpassword_hint">Confirm Password*</string>
    <string name="sociallogin_tv_username">Create a unique Username</string>
    <string name="sociallogin_tv_zipcode">Enter Your Zip Code</string>
    <string name="sociallogin_bt_submit">Submit</string>
    <string name="status">status</string>
    <string name="register_ok_message">Successful !</string>
    <string name="avatar_takeaphoto">Take A New Photo</string>
    <string name="avatar_chooseimage">Choose From Library</string>
    <string name="avatar_cancel">Cancel</string>
    <string name="map_et_search_hint">Search (menu item, addy , city/zip, name, ethnicity)</string>
    <string name="map_bt_map">Map</string>
    <string name="map_bt_list">List</string>
    <string name="nomalsearch_tv_defaultsearch">Run Default Search Profile</string>
    <string name="nomalsearch_tv_title">Search</string>
    <string name="nomalsearch_et_search">Keyword Search</string>
    <string name="nomalsearch_bt_submit">Submit</string>
    <string name="nomalsearch_bt_cancel">Cancel</string>
    <string name="nomalsearch_tv_or">or</string>
    <string name="menu_logout">Logout</string>
    <string name="toast_logout_failed">Invalid Auth key</string>
    <string name="mysearch_bt_saved_profile">Saved Profile</string>
    <string name="mysearch_bt_create_profile">Create Profile</string>
    <string name="mysearch_tv_mysearch_profiles">MySearch Profiles</string>
    <string name="mysearch_tv_default">Default</string>
    <string name="createmysearch_tv_title">Create MySearch Profile</string>
    <string name="createmysearch_et_key_hint">Enter Menu Items/Ingredients/Tag Keywords(e.g. Salmon Sushi, No Onions, Vegan, Gluten-Free,Cheeseburger, Apple Martini, etc.)</string>
	<string name="createmysearch_tv_menu_item_price">Menu Item Price</string>
	<string name="createmysearch_tv_menu_item_rating">Menu Item Rating</string>
	<string name="createmysearch_tv_server_rating">Server Rating</string>
	<string name="createmysearch_tv_distance">Distance from current location</string>
	<string name="createmysearch_tv_points_offered">Points Offered</string>
	<string name="createmysearch_tv_restaurant_rating">Restaurant Rating</string>
	<string name="createmysearch_bt_save">Save MySearch Profile</string>
	<string name="createmysearch_bt_search">Search</string>
	<string name="createmysearch_bt_cancel">Cancel</string>
	<string name="createmysearch_bt_choose_type_food">Genre (Food Type)</string>
	<string name="createmysearch_bt_choose_type_menu">Published Menu Types</string>
	<string name="dialog_createmysearch_tv_title">MySearch Profile Name</string>
	<string name="dialog_createmysearch_et_name_hint">MySearch Name</string>
	<string name="dialog_createmysearch_bt_save">Save</string>
	<string name="dialog_createmysearch_bt_cancel">Cancel</string>
	<string name="dialog_choose_tv_title_menu_type">Menu Type</string>
	<string name="dialog_choose_tv_title_food_type">Food Type</string>
</resources>