<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="28dp"
        android:layout_marginTop="28dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_logo_splash" />

    <ImageButton
        android:id="@+id/register_ib_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="30dp"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/register_et_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/register_et_firstname_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_et_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register_et_firstname"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/register_et_lastname_hint" />

    <EditText
        android:id="@+id/register_et_zipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register_et_lastname"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/register_et_zipcpde_hint" />

    <EditText
        android:id="@+id/register_et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register_et_zipcode"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/register_et_email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register_et_email"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/register_et_username_hint" />

    <EditText
        android:id="@+id/register_et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register_et_username"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/register_et_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_et_confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register_et_password"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/register_et_confirmpassword_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_bt_submit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register_bt_submit"
        android:onClick="onClicks" />

</RelativeLayout>