<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sociallogin_tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:text="@string/forgot_tv_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/forgot_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sociallogin_tv_username"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/forgot_et_email_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/forgot_bt_submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/forgot_bt_submit" />

    <Button
        android:id="@+id/forgot_bt_cancel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/forgot_bt_submit"
        android:layout_below="@+id/forgot_bt_submit"
        android:text="@string/forgot_bt_cancel" />

</RelativeLayout>