<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     >
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF" >

        <ImageView
            android:id="@+id/login_im_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_logo_splash" />

        <TextView
            android:id="@+id/login_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_im_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/login_tv_label" />

        <ImageButton
            android:id="@+id/login_ib_facebook"
            style="@drawable/action_item_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_tv_title"
            android:layout_marginRight="30sp"
            android:layout_marginTop="21dp"
            android:layout_toLeftOf="@+id/login_ib_twitter"
            android:background="@drawable/button_facebook"
            android:onClick="onClicks"
            android:src="@drawable/ic_facebook" />

        <ImageButton
            android:id="@+id/login_ib_twitter"
            style="@drawable/action_item_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/login_ib_facebook"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_twitter"
            android:onClick="onClicks"
            android:src="@drawable/ic_twitter" />

        <ImageButton
            android:id="@+id/login_ib_google"
            style="@drawable/action_item_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/login_ib_twitter"
            android:layout_marginLeft="30sp"
            android:layout_toRightOf="@+id/login_ib_twitter"
            android:background="@drawable/button_google"
            android:onClick="onClicks"
            android:src="@drawable/ic_google" />

        <TextView
            android:id="@+id/login_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_ib_facebook"
            android:layout_marginTop="39dp"
            android:text="@string/login_tv_username" />

        <TextView
            android:id="@+id/login_tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/login_tv_username"
            android:layout_marginTop="20dp"
            android:text="@string/login_tv_password" />

        <EditText
            android:id="@+id/login_et_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login_tv_username"
            android:layout_alignBottom="@+id/login_tv_username"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/login_tv_username"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login_tv_password"
            android:layout_alignBottom="@+id/login_tv_password"
            android:layout_alignLeft="@+id/login_et_username"
            android:layout_alignRight="@+id/login_et_username"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_bt_createaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_bt_submit"
            android:onClick="onClicks"
            android:text="@string/login_bt_CreateNewAccount" />

        <Button
            android:id="@+id/login_bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_et_password"
            android:layout_marginTop="14dp"
            android:layout_toLeftOf="@+id/login_ib_twitter"
            android:onClick="onClicks"
            android:text="@string/login_bt_submit" />

        <Button
            android:id="@+id/login_bt_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
            android:layout_below="@id/login_et_password"
            android:layout_toRightOf="@+id/login_bt_submit"
            android:onClick="onClicks"
            android:text="@string/login_bt_forgotPassword" />
    </RelativeLayout>

</ScrollView>