<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/map_ib_mysearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onClicks"
            android:src="@drawable/ic_mysearch_disabled" />

        <EditText
            android:id="@+id/map_et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/map_et_search_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/map_bt_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="onClicks"
            android:text="@string/map_bt_map" />

        <Button
            android:id="@+id/map_bt_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="onClicks"
            android:text="@string/map_bt_list" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/map_ll_viewmap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_vertical"
                >

                <fragment
                    android:id="@+id/map_gm_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="com.google.android.gms.maps.SupportMapFragment"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="1" >

                <com.meetme.android.horizontallistview.HorizontalListView
                    android:id="@+id/map_hlv_list"
                    android:layout_width="match_parent"
                    android:layout_height="120sp" >
                </com.meetme.android.horizontallistview.HorizontalListView>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/map_ll_viewlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <ListView
                android:id="@+id/map_lv_listitem"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </ListView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>